# pushswap

./: CMakeLists.txt  Makefile  benchmark100.sh  benchmark500.sh  push_swap
includes/: pushswap.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
src/: benchmark.sh  benchmark100.sh  benchmark500.sh  main.c  problem_100  problem_500  push_swap  step_0_init.c  step_1_drop_elems_to_b.c  step_2_find_elem_in_b.c  step_3_move_elem_to_a.c  task_operations_0.c  task_operations_1.c  task_operations_2.c  utils.c  utils_arr2x.c  utils_list.c  utils_nav.c
